added characterizer chapter and finished characterizer recipe

--- a/doc/calibre.tex
+++ b/doc/calibre.tex
@@ -23,7 +23,7 @@ most of the options for the checks and to specify the input files.
 \Cref{tab:svrf} shows the \gls{SVRF} rules that are used to specify the inputs
 and outputs for Calibre's tasks.
 
-\begin{table}[h]
+\begin{table}[ht]
 	\begin{center}
 \begin{tabular}{l|l}
 Layout System & The format of the layout data.\\
