doc: fixed issues with latex versions
Change-Id: I202913df06beea6473eceb436594d8b4ca7968e2

--- a/doc/characterizer.tex
+++ b/doc/characterizer.tex
@@ -15,7 +15,8 @@ It uses the following input data:
 
 \begin{figure}
 	\centering
-	\input{img/workflow_timing_characterizer.tex}
+	%\input{img/workflow_timing_characterizer.tex}
+	\missingfigure{Figure removed: tikz graphs library and latex distribution version mismatch.}
 	\caption{Figure taken from Hartel, 2015, PhD thesis}
 	\label{fig:workflow_characterizer}
 \end{figure}
