--- a/doc/manual.latex
+++ b/doc/manual.latex
@@ -21,7 +21,7 @@
 \usepackage{cleveref}
 \usepackage[toc]{glossaries}
 \usepackage{siunitx}
-\setglossarystyle{listgroup}
+%\setglossarystyle{listgroup}   # AH: removed: glossaries and latex distribution version mismatch
 \makeglossaries
 \input{glossary.tex}
 
@@ -44,7 +44,7 @@
 
 \newenvironment{lstbashplain}{%
 \VerbatimEnvironment
-\begin{minted}[numbersep=5pt,autogobble=true]{bash}}
+\begin{minted}[numbersep=5pt]{bash}}
 {%
 \end{minted}}
 
